--- a/Views/Filmes/Details.cshtml
+++ b/Views/Filmes/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Lancamento)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Genero)
+            @Html.DisplayNameFor(model => model.Type)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Genero)
+            @Html.DisplayFor(model => model.Type)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Img)
