--- a/Views/Filmes/Edit.cshtml
+++ b/Views/Filmes/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="Lancamento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Genero" class="control-label"></label>
-                <input asp-for="Genero" class="form-control" />
-                <span asp-validation-for="Genero" class="text-danger"></span>
+                <label asp-for="Type" class="control-label"></label>
+                <input asp-for="Type" class="form-control" />
+                <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Img" class="control-label"></label>
