--- a/Views/Flixssa/Add.cshtml
+++ b/Views/Flixssa/Add.cshtml
@@ -2,11 +2,15 @@
 
 <h1>Add Cheese</h1>
 
-<form asp-controller="Filme" asp-action="Add" method="post">
+<form asp-controller="Flixssa" asp-action="Add" method="post">
  <div class="form-group">
         <label asp-for="Titulo"></label>
         <input class="form-control" asp-for="Titulo" />
         <span asp-validation-for="Titulo"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Type"></label>
+        <select asp-for="Type" asp-items="Model.Select"></select>
     </div>
 
     <input type="submit" value="Add Cheese" />
