--- a/Views/Flixssa/Add.cshtml
+++ b/Views/Flixssa/Add.cshtml
@@ -1,6 +1,6 @@
 @model Filmes.Models.AddFilmeVm
 
-<h1>Add Cheese</h1>
+<h1>Add Filme</h1>
 
 <form asp-controller="Flixssa" asp-action="Add" method="post">
  <div class="form-group">
@@ -9,10 +9,20 @@
         <span asp-validation-for="Titulo"></span>
     </div>
     <div class="form-group">
+                <label asp-for="Lancamento" class="control-label"></label>
+                <input asp-for="Lancamento" class="form-control" />
+                <span asp-validation-for="Lancamento" class="text-danger"></span>
+            </div>
+    <div class="form-group">
         <label asp-for="Type"></label>
         <select asp-for="Type" asp-items="Model.Select"></select>
     </div>
+     <div class="form-group">
+        <label asp-for="Img"></label>
+        <input class="form-control" asp-for="Img" />
+        <span asp-validation-for="Img"></span>
+    </div>
 
-    <input type="submit" value="Add Cheese" />
+    <input type="submit" value="Add Filme" />
 
 </form>
