--- a/Views/Flixssa/Add.cshtml
+++ b/Views/Flixssa/Add.cshtml
@@ -1,28 +1,33 @@
 @model Filmes.Models.AddFilmeVm
+<div id="form">
+    <h1>Add Filme</h1>
 
-<h1>Add Filme</h1>
-
-<form asp-controller="Flixssa" asp-action="Add" method="post">
- <div class="form-group">
-        <label asp-for="Titulo"></label>
-        <input class="form-control" asp-for="Titulo" />
-        <span asp-validation-for="Titulo"></span>
-    </div>
-    <div class="form-group">
+    <form asp-controller="Flixssa" asp-action="Add" method="post">
+            <div class="form-group">
+                <label asp-for="Titulo"></label>
+                <input class="form-control" asp-for="Titulo" />
+                <span asp-validation-for="Titulo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Lancamento" class="control-label"></label>
                 <input asp-for="Lancamento" class="form-control" />
                 <span asp-validation-for="Lancamento" class="text-danger"></span>
             </div>
-    <div class="form-group">
-        <label asp-for="Type"></label>
-        <select asp-for="Type" asp-items="Model.Select"></select>
-    </div>
-     <div class="form-group">
-        <label asp-for="Img"></label>
-        <input class="form-control" asp-for="Img" />
-        <span asp-validation-for="Img"></span>
-    </div>
+            <div class="form-group">
+                <label asp-for="Type"></label>
+                <select asp-for="Type" asp-items="Model.Select"></select>
+                <span asp-validation-for="Type" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Img"></label>
+                <input class="form-control" asp-for="Img" />
+                <span asp-validation-for="Img" class="text-danger"></span>
+            </div>
 
-    <input type="submit" value="Add Filme" />
+            <input type="submit" value="Add Filme" />
+    </form>
+</div>
 
-</form>
+@section Scripts{
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
