--- a/Views/Flixssa/Main.cshtml
+++ b/Views/Flixssa/Main.cshtml
@@ -1,29 +1,34 @@
 @model List<Filmes.Models.Filme> 
 
 <h1>@ViewBag.Title</h1>
+
+<form  asp-controller="Flixssa" asp-action="Main">
+        <p>
+            <input class = "col-3" class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search" name="src">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
+        </p>
+</form>
 <table class="table">
 
-    <form  asp-controller="Flixssa" asp-action="Main">
-    <p>
-        <input class = "col-3" class="form-control" type="text" placeholder="Buscar" aria-label="Search" name="src">
-        
-      <button class="btn btn-info btn-sm" type="submit">Buscar</button>
-    </p>
-</form>    
-    <tr>
-        <th>Imagem</th>
-        <th>Titulo</th>
-        <th>Lancamento</th>
-        <th>Tipo</th>
-    </tr>
+    <thead>
+        <tr class="table-primary">
+            <th>Imagem</th>
+            <th>Titulo</th>
+            <th>Lancamento</th>
+            <th>Tipo</th>
+        </tr>
+    </thead>    
+    
   @foreach (var Filme in Model)
     {
-        <tr class = "text-warning">
-            <td ><img class="col-sm" src=@Filme.Img alt = "imagem"/></td>
-            <td class="col-3">@Filme.Titulo</td>
-            <td class="col-3">@Filme.Lancamento</td>
-            <td class="col-3">@Filme.Type</td>
-        </tr>
+        <tbody>
+            <tr class ="text-primary">
+                <td><img class="col-sm" src=@Filme.Img alt = "imagem"/></td>
+                <td class="col-3">@Filme.Titulo</td>
+                <td class="col-3">@Filme.Lancamento</td>
+                <td class="col-3">@Filme.Type</td>
+             </tr>
+        </tbody>
     }
 </table>
 @if (Model.Count == 0)
@@ -31,4 +36,4 @@
     <p>No Filmes yet!</p>
 }
 
-<p><a asp-controller="Flixssa" asp-action="Add">Add Filme</a></p>
+<a asp-controller="Flixssa" asp-action="Add">Add Filme</a>
