--- a/Views/Flixssa/Remove.cshtml
+++ b/Views/Flixssa/Remove.cshtml
@@ -12,5 +12,5 @@
         </div>
     }
     <br>
-    <input type="submit" value="Remove Selected Filme(s)"  class="btn btn-danger"/>
+    <input type="submit" value="Remover Filme(s) Selecionados"  class="btn btn-danger"/>
 </form>
