--- a/Views/Flixssa/Add.cshtml
+++ b/Views/Flixssa/Add.cshtml
@@ -1,7 +1,7 @@
 @model Filmes.Models.AddFilmeVm
 <div id="form">
     <div class="">
-        <h1>Add Filme</h1>
+        <h1>Adicionar Filme</h1>
     </div>
 
     <form asp-controller="Flixssa" asp-action="Add" method="post">
