--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,15 +29,15 @@
             </div>
         </nav>
     </header>
-    <div style="background-image:./img/pexels-pixabay-52500" class="container">
-        <main role="main" class="pb-3">
+    <div  class="container">
+        <main style="background-image:img/pexels-pixabay-52500" role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Filmes - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - FlixSsa<a asp-area="" asp-controller="Home"></a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
